@@ -26,6 +26,12 @@ Zope Changes
 
     Features added
 
+      - Added a 'product-config' section type to zope.conf, allowing
+        arbitrary key-value mappings.  Products can look for such
+        confgiurations to set product-specific options (see the
+        example '<product-config>' section in skel/etc/zope.conf.in
+        for sample usage).
+
       - Collector #1490: Added a new zope.conf option to control the
         character set used to encode unicode data that reaches
         ZPublisher without any specified encoding.
